2003-05-09  David Hyatt  <hyatt@apple.com>

	Always allow KONQ_TEXT as a valid value, and don't restrict its
	use to lax CSS parsing.  (We want our UA sheets to be parsed
	strictly.)

	Fixes bug 3224791, color inheritance not being properly cut off
	in tables in quirks mode.
	
        Reviewed by mjs and darin

        * khtml/css/cssparser.cpp:
        (CSSParser::parseValue):

2003-05-09  David Hyatt  <hyatt@apple.com>

	Fix for 3253695, XML pages with <style>@import...</style> don't
	render.  The XML tokenizer is getting text in small chunks, and
	so it tries to load the sheet multiple times.  This fix patches
	the stylesheet code to properly decrement the loading sheet
	count when you abort a still-loading @import.
	
        Reviewed by darin

        * khtml/html/html_headimpl.cpp:
        (HTMLStyleElementImpl::childrenChanged):

2003-05-09  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3191943 -- XML parsing error occurs when loading shift-JIS Japanese XML file

        * khtml/misc/decoder.h: Add a new type of encoding, EncodingFromXMLHeader.
        * khtml/misc/decoder.cpp:
        (findXMLEncoding): Added.
        (Decoder::decode): Call findXMLEncoding to extract the encoding from the XML header.

2003-05-08  Darin Adler  <darin@apple.com>

        Reviewed by John and Ken.

	- fixed 3253461 -- stylesheet-reading code does not support BOM
	- fixed 3253359 -- XML parser does not allow UTF-8 BOM

        * kwq/KWQTextCodec.mm:
        (KWQTextDecoder::KWQTextDecoder): Initialize the new _littleEndian, _atStart,
        and _numBufferedBytes fields, not the old _flags, _state, and _haveBufferedByte fields.
        (KWQTextDecoder::convertUTF16): Moved the BOM-based endianness detection out of here;
        now done in toUnicode. Switched to use the new multibyte buffer, even though we only
        need one byte of it. Remove any BOM characters encountered within the text.